HOCS-5281: refactor getStage to use local screens
Refactor the getStage method to use the local ScreenRepository to load
screens from the local file system. This removes one of the dependencies
on hocs-info-service.