@@ -6,7 +6,14 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.HttpClientErrorException;
-import uk.gov.digital.ho.hocs.workflow.api.dto.*;
+import uk.gov.digital.ho.hocs.workflow.api.dto.CreateCaseResponse;
+import uk.gov.digital.ho.hocs.workflow.api.dto.CreateCaseworkCorrespondentRequest;
+import uk.gov.digital.ho.hocs.workflow.api.dto.DocumentSummary;
+import uk.gov.digital.ho.hocs.workflow.api.dto.FieldDto;
+import uk.gov.digital.ho.hocs.workflow.api.dto.GetCaseDetailsResponse;
+import uk.gov.digital.ho.hocs.workflow.api.dto.GetCaseResponse;
+import uk.gov.digital.ho.hocs.workflow.api.dto.GetStageResponse;
+import uk.gov.digital.ho.hocs.workflow.api.dto.SchemaDto;
 import uk.gov.digital.ho.hocs.workflow.client.camundaclient.CamundaClient;
 import uk.gov.digital.ho.hocs.workflow.client.caseworkclient.CaseworkClient;
 import uk.gov.digital.ho.hocs.workflow.client.caseworkclient.dto.CreateCaseworkCaseResponse;
@@ -23,8 +30,14 @@ import uk.gov.digital.ho.hocs.workflow.client.infoclient.dto.CaseDetailsFieldDto
 import uk.gov.digital.ho.hocs.workflow.client.infoclient.dto.TeamDto;
 import uk.gov.digital.ho.hocs.workflow.client.infoclient.dto.UserDto;
 import uk.gov.digital.ho.hocs.workflow.domain.exception.ApplicationExceptions;
-import uk.gov.digital.ho.hocs.workflow.domain.model.forms.*;
-import uk.gov.digital.ho.hocs.workflow.api.dto.CreateCaseworkCorrespondentRequest;
+import uk.gov.digital.ho.hocs.workflow.domain.model.forms.HocsCaseSchema;
+import uk.gov.digital.ho.hocs.workflow.domain.model.forms.HocsForm;
+import uk.gov.digital.ho.hocs.workflow.domain.model.forms.HocsFormAccordion;
+import uk.gov.digital.ho.hocs.workflow.domain.model.forms.HocsFormField;
+import uk.gov.digital.ho.hocs.workflow.domain.model.forms.HocsFormSecondaryAction;
+import uk.gov.digital.ho.hocs.workflow.domain.model.forms.HocsSchema;
+import uk.gov.digital.ho.hocs.workflow.domain.repositories.ScreenRepository;
+import uk.gov.digital.ho.hocs.workflow.domain.repositories.entity.Schema;
 import uk.gov.digital.ho.hocs.workflow.security.UserPermissionsService;
 import uk.gov.digital.ho.hocs.workflow.util.NoteType;
 import uk.gov.digital.ho.hocs.workflow.util.UuidUtils;
@@ -33,14 +46,23 @@ import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.time.LocalDate;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toList;
 import static net.logstash.logback.argument.StructuredArguments.value;
 import static uk.gov.digital.ho.hocs.workflow.application.LogEvent.CASE_CLOSE_ERROR;
 import static uk.gov.digital.ho.hocs.workflow.application.LogEvent.CASE_STARTED_FAILURE;
-import static uk.gov.digital.ho.hocs.workflow.application.LogEvent.CASE_NOTE_FAILED;
 import static uk.gov.digital.ho.hocs.workflow.application.LogEvent.EVENT;
 import static uk.gov.digital.ho.hocs.workflow.application.LogEvent.WORKFLOW_SERVICE_UPDATE_CASE_DATA_VALUES;
 
@@ -76,17 +98,21 @@ public class WorkflowService {
 
     private final UserPermissionsService userPermissionsService;
 
+    private final ScreenRepository screenRepository;
+
     @Autowired
     public WorkflowService(CaseworkClient caseworkClient,
                            DocumentClient documentClient,
                            InfoClient infoClient,
                            CamundaClient camundaClient,
-                           UserPermissionsService userPermissionsService) {
+                           UserPermissionsService userPermissionsService,
+                           ScreenRepository screenRepository) {
         this.caseworkClient = caseworkClient;
         this.documentClient = documentClient;
         this.infoClient = infoClient;
         this.camundaClient = camundaClient;
         this.userPermissionsService = userPermissionsService;
+        this.screenRepository = screenRepository;
     }
 
     private static List<HocsFormField> schemasToFormField(List<SchemaDto> schemaDtos) {
@@ -232,10 +258,10 @@ public class WorkflowService {
 
         GetCaseworkCaseDataResponse inputResponse = caseworkClient.getCase(caseUUID);
 
-        SchemaDto schemaDto = infoClient.getSchema(screenName);
-        List<HocsFormField> fields = schemaDto.getFields().stream().map(HocsFormField::from).collect(toList());
+        Schema schemaDto = screenRepository.getSchema(screenName);
+        List<HocsFormField> fields = schemaDto.getFields().stream().map(HocsFormField::from).toList();
         List<HocsFormSecondaryAction> secondaryActions = schemaDto.getSecondaryActions().stream().map(
-            HocsFormSecondaryAction::from).collect(toList());
+            HocsFormSecondaryAction::from).toList();
         fields = HocsFormAccordion.loadFormAccordions(fields);
         HocsSchema schema = new HocsSchema(schemaDto.getTitle(), schemaDto.getDefaultActionLabel(), fields,
             secondaryActions, schemaDto.getProps(), schemaDto.getValidation(), schemaDto.getSummary());
